<resources>
    <string name="app_name">Ilm Izlab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ilm_izlab">Loyihaning maqsadi ilm yo\'lida izlanuvchilar uchun ilm manbalarini oson topishga yordam berish</string>
    <string name="todo">TODO</string>
    <string name="ilm_izlab_title">ILM IZLAB</string>
    <string name="log_out">Tizimdan chiqish</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="sort">Saralash</string>
    <string name="by_rating">Eng saralari</string>
    <string name="by_distance">Eng yaqinlari</string>
    <string name="select_science">Fanni tanlang</string>
    <string name="select">Tanlash</string>
    <string name="markaz_nomi">Markaz nomi</string>
    <string name="share">Ulashish</string>
    <string name="qo_yilgan_baholar">Qo\'yilgan baholar</string>
    <string name="rate">Baholash</string>
    <string name="subscribers_count">Obunachilar soni</string>
    <string name="subscribe">Obuna bo\'lish</string>
    <string name="avg_salary">O\'rtacha oylik to\'lov</string>
    <string name="address">Manzil</string>
    <string name="open_in_map">Xaritada ko\'rish</string>
    <string name="phone_number">Telefon raqam</string>
    <string name="feed">Izoh</string>
    <string name="show_feed_all">Barchasini ko\'rish</string>
    <string name="courses">Kurslar</string>
    <string name="news">Yangiliklar</string>
    <string name="rating">Baholar</string>
    <string name="error_hatolik">Hatolik!</string>
    <string name="message">message</string>
    <string name="ok">OK</string>
    <string name="about_app">Ilova haqida</string>
    <string name="developed_by">Developed by</string>
    <string name="icon_text">/**/</string>
    <string name="devapp">DEVAPP</string>
    <string name="software_company">SOFTWARE COMPANY</string>
    <string name="log_in">Tizimga kirish</string>
    <string name="phone_hint_example">+9989XXXXXXX</string>
    <string name="phone_start_numbers">+998</string>
    <string name="your_name">Ismingiz</string>
    <string name="enter_name">Ismingizni kiriting...</string>
    <string name="password">Parol</string>
    <string name="enter_password">Parolni kiriting...</string>
    <string name="confirm_password">Parolni tasdiqlash</string>
    <string name="enter_confirmation_password">Parolni qayta kiriting...</string>
    <string name="sms_code">SMS kod</string>
    <string name="sign_in">Kirish</string>
    <string name="markazga_qanday_baho_berasiz">Markazga qanday baho berasiz?</string>
    <string name="markaz_haqida_qanday_fikrdasiz">Markaz haqida qanday fikrdasiz?</string>
    <string name="iltimos_baholash_uchun_oldin_ro_yhatdan_o_ting">Iltimos baholash uchun oldin ro\'yhatdan o\'ting.</string>
    <string name="sign_up">Ro\'yhatdan o\'tish</string>
    <string name="sizning_bergan_fikringiz_boshqa_foydalanuvchilarga_sifatli_markazlarni_topishga_yordam_beradi_nsizning_fikringiz_markaz_sahifasida_e_lon_qilinadi">Sizning bergan fikringiz boshqa foydalanuvchilarga sifatli markazlarni topishga yordam beradi!\nSizning fikringiz markaz sahifasida e\'lon qilinadi</string>
    <string name="select_region">Hududni tanlang</string>
    <string name="teachers">O\'qituvchilar</string>
    <string name="location">Location</string>
    <string name="rank">rank</string>
    <string name="teachers_1">Ustozlar</string>
    <string name="categories">Kategoriyalar</string>
    <string name="top_centers">Top markazlar</string>
    <string name="nearest_centers">Yaqin atrofdagi markazlar</string>
    <string name="navigate">Borish!</string>
    <string name="batafsil">Batafsil!</string>
    <string name="search_centers">Markazlarni qidirish...</string>
    <string name="please_sign">Ushbu bo\'lim ochilishi uchun iltimos ro\'yhatdan o\'ting</string>
    <string name="name_surname">Ism-familiya</string>
    <string name="phone">+998934972205</string>
    <string name="edit_profile">Profilni tahrirlash</string>
    <string name="control_centers">Markazlarni boshqarish</string>
    <string name="biz_bilan_bog_lanish">Biz bilan bog\'lanish</string>
    <string name="custom_navigation_drawer_row">Custom Navigation Drawer Row</string>
    <string name="o_qituvchi_ismi">O\'qituvchi ismi:</string>
    <string name="mutaxassisligi">Mutaxassisligi:</string>
    <string name="ish_tajribasi">Ish tajribasi:</string>
    <string name="bog_lanish">Bog\'lanish</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="news_menu">News</string>
    <string name="subscribed">Subscribed</string>

</resources>