<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.main.InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/actionBarColor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnCloseInfo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/actionBarColor"
                app:cardCornerRadius="18dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="center"
                android:text="@string/about_app"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/ilm_izlab"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/developed_by"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:cardCornerRadius="30dp"
                            app:cardElevation="0dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/devapp"
                                android:gravity="center"
                                android:text="@string/icon_text"
                                android:textColor="@color/white"
                                android:textSize="24sp" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/devapp"
                                android:textColor="@color/black"
                                android:textSize="32sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/software_company"
                                android:textColor="@color/black"
                                android:textSize="8sp"
                                tools:ignore="SmallSp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>