<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="200dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="16dp">

                    <ImageView
                        android:id="@+id/mainImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/angle"
                    app:cardCornerRadius="16dp"
                    app:contentPadding="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_room"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/tvLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="4dp"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:text="@string/location"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/angle"
                    app:cardCornerRadius="16dp"
                    app:contentPadding="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_star"
                            app:tint="@color/primaryColor" />

                        <TextView
                            android:id="@+id/tvRank"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="4dp"
                            android:gravity="center_vertical"
                            android:text="@string/rank"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/lorem"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/courseList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lorem"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lorem"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>