<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".screen.category.CategoryActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lorem"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="8dp"
                android:background="#E8E7E7"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/actionBarColor"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:contentPadding="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvRegion"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/lorem"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_down_drop"
                            app:tint="@color/white"
                            android:contentDescription="@string/todo" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="@color/actionBarColor"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:contentPadding="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvSort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/lorem"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_down_drop"
                            app:tint="@color/white"
                            android:contentDescription="@string/todo" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#6A6A6A" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/layoutSort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#65000000"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/sort"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/sortGroup"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/sortRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/by_rating"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/sortDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_distance"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RadioGroup>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </FrameLayout>
</FrameLayout>